# lab2

./: .gitignore  BubbleSorter.hpp  CMakeLists.txt  HeapSorter.hpp  InsertionSorter.hpp  Isorter.hpp  Person.hpp  QuickSorter.hpp  README_HeapSorter.md  SmrtPtr.hpp  compare.hpp  create_random.cpp  create_random.hpp  csv_actions.cpp  csv_actions.hpp  csv_to_sequence.cpp  csv_to_sequence.hpp  graphics.cpp  graphics.hpp  main.cpp  smrt_ptr.hpp  sort_comparison.cpp  sort_comparison.hpp  sort_timer.cpp  sort_timer.hpp  tests.cpp  tests.hpp
Sorts/: BubbleSorter.hpp  HeapSorter.hpp  InsertionSorter.hpp  QuickSorter.hpp
csv/: README.md  data.csv  reverse_sorted.csv  sort_times.csv  sort_times_big.csv  sort_times_reverse_sorted.csv  sort_times_sorted.csv  sorted.csv  sorted_by_salary.csv  sorted_by_salary_lastname.csv  sorted_by_salary_lastname_height.csv
data_structures/: ArraySequence.h  ArraySequence.tpp  array_sequence.h  array_sequence.tpp  dynamic_array.h  dynamic_array.tpp  linked_list.h  linked_list.tpp  list_sequence.h  list_sequence.tpp  sequence.h
plots/: README.md
